# tokamak-sim

./: .dockerignore  .gitignore  AGENTS.md  CURRENT_PIPELINE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: T15MD_new_data.toml
configs/initial_states/: ITER_default_currents.toml  JET_default_currents.toml  T15MD_new_data_3854.toml  T15MD_new_data_3855.toml  T15MD_new_data_3856.toml  (+28 more)
docs/: architecture.md  ip_jdot_semantics_audit.md  plasma_boundary_calculation.txt  repository-layout.md  workflows.md
scripts/: audit_t15_matched_replay_alignment.py  build_t15_trim50_idealized_matched_pipeline.sh  check_boundary_gpu_equivalence.py  compare_cpu_gpu_boundary_t15_replay.py  fit_sigma_L_gradient.py  fit_sigma_L_grid.py  fit_t15_boundary_parameters.py  generate_synthetic_ip_tables.py  generate_synthetic_iter_dataset.py  idealize_t15_coil_actions.py  plot_t15_boundary_reconstructions.py  run_simulation_artifacts.py  run_t15md_limited_replay_dataset.py  run_t15md_replay_batch.sh  smooth_lqr_boundary_references.py  summarize_t15md_limited_replays.py
tests/: test_batched_gpu_training_path.py  test_boundary_module_split.py  test_bridge_and_metrics.py  test_compute_backend.py  test_gpu_plasma_model.py  test_hinf_controllers.py  test_idealize_t15_coil_actions.py  test_ip_trajectories.py  test_learned_magnetic_controller.py  test_legacy_boundary.py  test_lqr_t15_zaitsev.py  test_parametric_boundary.py  test_plasma_model_parity.py  test_split_sol_actuators.py  test_workflows.py
tokamak_control/: __init__.py  compute.py  diagnostics.py
(+70 files in other folders)
